--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "faker": "^5.5.3",
     "mongodb": "6.7",
     "mongoose": "^8.4.1"
   },
